2005-10-03  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/SwingUtilities/layoutCompoundLabel.java:
	New test.

2005-10-02  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/MyBasicButtonUI.java
	(getDefaultTextIconGapField): new method,
	(getDefaultTextShiftOffsetField): new method,
	(setDefaultTextShiftOffsetField): new method,
	(getTextShiftOffset): new method,
	(setTextShiftOffset): new method,
	(clearTextShiftOffset): new method,
	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/clearTextShiftOffset.java:
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/defaultTextIconGap.java:
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/defaultTextShiftOffset.java:
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/getTextShiftOffset.java:
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/setTextShiftOffset.java:
	New test.

2005-10-02  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/AbstractButton/setRolloverEnabled.java: 
	New test.

2005-09-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/ToolBarBorder/getBorderInsets.java: new test.

2005-09-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalButtonUI/getDisabledTextColor.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalButtonUI/getFocusColor.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalButtonUI/getSelectColor.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalButtonUI/MyMetalButtonUI.java: support class.

2005-09-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxIcon/getIconHeight.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxIcon/getIconWidth.java: new test.

2005-09-30  Fabien DUMINY  <fduminy@jnode.org>
	