@@ -1,3 +1,7 @@
+2005-10-04  Roman Kennke  <kennke@aicas.com>
+
+	* gnu/testlet/java/awt/Component/getFont.java: New test.
+
 2005-10-03  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* gnu/testlet/javax/swing/SwingUtilities/layoutCompoundLabel.java:
